@@ -2391,7 +2391,7 @@ lv=3
 dt=Text
 nm=Call
 ctime=3560706460
-mtime=3717267269
+mtime=3970573080
 <article>
 #_... = Plugin.Call (PluginId, ...)
 #_
@@ -2422,7 +2422,7 @@ mtime=3717267269
 #_       string   -> FMVT_STRING  (автоматически преобразуется из UTF-8 в UTF-16LE)
 #_       {string} -> FMVT_BINARY  (для того, чтобы передать произвольный стринг без
 #_                                 преобразования UTF-8 -> UTF16LE, его нужно передавать,
-#_                                 помещённым в таблицу как элемент с ключом 1)
+#_                                 помещённым в таблицу как элемент с ключом "__binary")
 #_
 #_  4. Величины, возвращаемые плагином через структуру *FarMacroCall*, передаются макросу
 #_     следующим образом:
@@ -2431,7 +2431,7 @@ mtime=3717267269
 #_       FMVT_DOUBLE  -> number
 #_       FMVT_INTEGER -> number, если "укладывается" в 53 бита, иначе int64
 #_       FMVT_STRING  -> string (автоматически преобразуется из UTF-16LE в UTF-8)
-#_       FMVT_BINARY  -> table (в таблице передаётся строка как элемент с ключом 1;
+#_       FMVT_BINARY  -> table (в таблице передаётся строка как элемент с ключом "__binary";
 #_                              передаётся как есть, без преобразования)
 #_       FMVT_POINTER -> light userdata
 #_       FMVT_ARRAY   -> table (массив элементов; в таблице установлено два поля:
