@@ -1,3 +1,7 @@
+shmuel 2025-10-25 17:10:58+03:00 - build 898
+
+1. LuaFAR: Add more stack operations to Macro-API engine.
+
 shmuel 2025-10-24 20:23:49+03:00 - build 897
 
 1. LuaFAR: add a few stack operations to Macro-API engine.
